--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -5,26 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-
     tools:context=".homeScreen.createReservation.FilterFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/darkLeafBrown"
         app:cardCornerRadius="@dimen/_10sdp"
+        android:backgroundTint="@color/leafBrown"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_10sdp"
             android:gravity="center"
             android:orientation="vertical"
             android:paddingHorizontal="@dimen/_5sdp"
             android:paddingVertical="@dimen/_10sdp">
 
             <Spinner
+                android:id="@+id/citySpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -36,6 +35,7 @@
                 android:textSize="@dimen/_20sdp" />
 
             <com.google.android.material.slider.RangeSlider
+                android:id="@+id/priceRangeSlider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -47,6 +47,7 @@
                 android:textSize="@dimen/_20sdp" />
 
             <RatingBar
+                android:id="@+id/ratingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:numStars="5"
@@ -58,6 +59,7 @@
                 android:layout_height="wrap_content">
 
                 <Button
+                    android:id="@+id/btnCancel"
                     style="@style/button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -65,6 +67,7 @@
                     android:text="Cancel" />
 
                 <Button
+                    android:id="@+id/btnApply"
                     style="@style/button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
