--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,6 +89,7 @@
         android:text="LOGIN" />
 
     <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
@@ -110,6 +111,15 @@
             android:textColor="@color/brown"
             android:textStyle="bold" />
 
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imgGoogle"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:src="@drawable/ic_fb_logo"
+        android:layout_below="@id/layout"/>
+
 
 </RelativeLayout>
