--- a/app/src/main/res/layout/all_rooms_item.xml
+++ b/app/src/main/res/layout/all_rooms_item.xml
@@ -37,6 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/_35sdp"
+                android:background="@color/black"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:text="Hotel Taj"/>
 
