--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -124,6 +124,7 @@
         app:cardCornerRadius="@dimen/_20sdp">
 
         <LinearLayout
+            android:id="@+id/viewGoogle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
