--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -25,47 +25,80 @@
         android:textSize="@dimen/_30sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivBack"/>
+        app:layout_constraintTop_toBottomOf="@id/ivBack" />
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:id="@+id/lyt2"
-        android:layout_marginTop="@dimen/_20sdp"
-        app:layout_constraintTop_toBottomOf="@+id/txtHeading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        app:cardCornerRadius="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
+        app:layout_constraintTop_toBottomOf="@+id/txtHeading">
 
-        <com.hbb20.CountryCodePicker
-            android:id="@+id/countryId"
-            android:layout_width="0dp"
-            android:gravity="center"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.7"/>
-
-        <EditText
-            android:id="@+id/etvPhoneNo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <LinearLayout
             style="@style/edittext"
-            android:hint="Phone Number"
-            android:imeOptions="actionNext"
-            android:inputType="number"
-            android:maxLength="10"
-            android:layout_weight="1.3"/>
-
-    </LinearLayout>
-
-        <Button
-            android:id="@+id/btnSend"
-            style="@style/button"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/_30sdp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/lightLeafBrown"
+            android:orientation="horizontal"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
             android:padding="0dp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:text="Send"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lyt2" />
+            android:paddingHorizontal="0dp"
+            android:paddingVertical="0dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp">
+
+            <com.hbb20.CountryCodePicker
+                android:id="@+id/countryPicker"
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp"
+                android:gravity="center" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_40sdp">
+
+                <TextView
+                    android:id="@+id/tvCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@color/gray"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/_10sdp"
+                    android:text="+91"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_14sdp" />
+
+                <EditText
+                    android:id="@+id/etvPhoneNo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/gray"
+                    android:imeOptions="actionDone"
+                    android:inputType="number"
+                    android:maxLength="10"
+                    android:paddingStart="@dimen/_5sdp"
+                    android:hint="Phone Number"/>
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
+    <Button
+        android:id="@+id/btnSend"
+        style="@style/button"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:padding="0dp"
+        android:text="Send"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lyt2" />
 
 
     <EditText
@@ -76,22 +109,33 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:gravity="center"
         android:hint="OTP"
-        android:imeOptions="actionNext"
+        android:imeOptions="actionDone"
         android:inputType="number"
         android:maxLength="6"
         app:layout_constraintTop_toBottomOf="@+id/btnSend" />
+
+    <Button
+        android:id="@+id/btnCheckOtp"
+        style="@style/button"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:padding="0dp"
+        android:text="Check OTP"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etvOTP" />
 
     <EditText
         android:id="@+id/etvNewPassword"
         style="@style/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:gravity="center"
         android:hint="New Password"
         android:imeOptions="actionNext"
         android:inputType="textAutoComplete"
-        app:layout_constraintTop_toBottomOf="@+id/etvOTP" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCheckOtp" />
 
     <EditText
         android:id="@+id/etvConfirmPassword"
