--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -31,20 +31,20 @@
         android:id="@+id/lyt2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginHorizontal="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        app:cardCornerRadius="@dimen/_10sdp"
         app:layout_constraintTop_toBottomOf="@+id/txtHeading">
 
         <LinearLayout
             style="@style/edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/lightLeafBrown"
-            android:orientation="horizontal"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
+            android:background="@color/lightLeafBrown"
+            android:orientation="horizontal"
             android:padding="0dp"
             android:paddingHorizontal="0dp"
             android:paddingVertical="0dp"
@@ -77,17 +77,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/gray"
+                    android:hint="Phone Number"
                     android:imeOptions="actionDone"
                     android:inputType="number"
                     android:maxLength="10"
-                    android:paddingStart="@dimen/_5sdp"
-                    android:hint="Phone Number"/>
+                    android:paddingStart="@dimen/_5sdp" />
 
             </LinearLayout>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 
     <Button
         android:id="@+id/btnSend"
