--- a/app/src/main/res/layout/all_rooms_item.xml
+++ b/app/src/main/res/layout/all_rooms_item.xml
@@ -26,7 +26,7 @@
                 <ImageView
                     android:id="@+id/imgRoom"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_170sdp"
+                    android:layout_height="@dimen/_130sdp"
                     android:scaleType="fitXY"
                     android:src="@drawable/back_ground_image" />
 
@@ -36,8 +36,7 @@
                 android:id="@+id/txtName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_35sdp"
-                android:background="@color/black"
+                android:textSize="@dimen/_30ssp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:text="Hotel Taj"/>
 
@@ -45,7 +44,8 @@
                 android:id="@+id/txtLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_20sdp"
+                android:textSize="@dimen/_15ssp"
+                android:paddingStart="@dimen/_5sdp"
                 android:text="Ahmedabad"/>
 
         </LinearLayout>
