--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -4,86 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    app:cardCornerRadius="@dimen/_10sdp"
-    android:backgroundTint="@color/leafBrown"
-    tools:context=".homeScreen.createReservation.FilterFragment">
+    android:layout_gravity="center">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/_10sdp"
-        android:backgroundTint="@color/leafBrown"
-        app:cardUseCompatPadding="true">
+        android:layout_gravity="center"
+        android:background="@drawable/fragment_dialog"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingHorizontal="@dimen/_30sdp"
+        android:paddingVertical="@dimen/_10sdp"
+        tools:context=".homeScreen.createReservation.FilterFragment">
+
+        <Spinner
+            android:id="@+id/citySpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:text="Price Range"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_20sdp" />
+
+        <com.google.android.material.slider.RangeSlider
+            android:id="@+id/priceRangeSlider"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:background="@color/white"
+            android:stepSize="100"
+            android:valueFrom="0"
+            android:valueTo="5000" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:text="Rating"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_20sdp" />
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:numStars="5"
+            android:rating="0"
+            android:stepSize="1" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:paddingHorizontal="@dimen/_5sdp"
-            android:paddingVertical="@dimen/_10sdp">
+            android:layout_height="wrap_content">
 
-            <Spinner
-                android:id="@+id/citySpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/btnReset"
+                style="@style/button"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Price Range"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_20sdp" />
+                android:layout_weight="1"
+                android:text="Reset" />
 
-            <com.google.android.material.slider.RangeSlider
-                android:id="@+id/priceRangeSlider"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/btnApply"
+                style="@style/button"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:stepSize="1"
-                android:valueFrom="0"
-                android:valueTo="5000"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Rating"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_20sdp" />
-
-            <RatingBar
-                android:id="@+id/ratingBar"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:numStars="5"
-                android:rating="0"
-                android:stepSize="1" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <Button
-                    android:id="@+id/btnCancel"
-                    style="@style/button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Cancel" />
-
-                <Button
-                    android:id="@+id/btnApply"
-                    style="@style/button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Apply" />
-
-            </LinearLayout>
+                android:layout_weight="1"
+                android:text="Apply" />
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
-
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
